--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
@@ -113,20 +113,21 @@
                                     <tbody>
                                     <tr>
                                         <td>MultiLayerNetwork</td>
-                                        <td>10</td>
-                                        <td>20</td>
+                                        <td>2</td>
+                                        <td>35</td>
                                         <td>01:01:01</td>
                                         <td>1:23</td>
-                                        <td>1:23</td>
-                                        <td>10000</td>
-                                        <td>10</td>
-                                        <td>10</td>
+                                        <td>1477520530145</td>
+                                        <td>100</td>
+                                        <td>8.474575996398926</td>
+                                        <td>1271.1864013671875</td>
                                     </tr>
                                     </tbody>
                                 </table>
                             </div>
                         </div>
-                    </div><!--End Table-->
+                    </div>
+                    <!--End Table -->
 
                     <!-- End Content -->
                 </div><!-- End Content Span10-->
