--- a/_includes/ch-sidebar.html
+++ b/_includes/ch-sidebar.html
@@ -3,8 +3,8 @@
     <li>
       <a href="#">Getting Started</a>
       <ul>
-        <li><a href="quickstart">快速入门指南</a></li>
-        <li><a href="gettingstarted">DL4J完全安装指南</a></li>
+        <li><a href="quickstart">Quickstart: Running DL4J</a></li>
+        <li><a href="gettingstarted">Comprehensive Setup Guide</a></li>
         <li><a href="buildinglocally">Build Locally From Master</a></li>
         <li><a href="maven">Use the Maven Build Tool</a></li>
         <li><a href="buildtools">Configure DL4J in Ivy, Gradle, SBT etc.</a></li>
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="tutorials">Deep Learning Tutorial Index</a></li>
         <li><a href="mnist-for-beginners">MNIST for Beginners</a></li>
-        <li><a href="usingrnns">在DL4J中使用递归网络</a></li>
+        <li><a href="usingrnns">Using Recurrent Nets in DL4J</a></li>
         <li><a href="http://nd4j.org/userguide">Use ND4J for Scientific Computing</a></li>
         <li><a href="datavec">DataVec: Vectorization and Preprocessing for Machine Learning</a></li>
         <li><a href="updater">Neural Net Updaters: SGD, Adam, Adagrad, Adadelta, RMSProp</a></li>
@@ -28,10 +28,10 @@
     <li>
       <a href="#">Introduction to Deep Learning</a>
       <ul>
-        <li><a href="neuralnet-overview">深度神经网络简介</a></li>
+        <li><a href="neuralnet-overview">Introduction to Neural Networks</a></li>
         <li><a href="questions">Questions to Ask When Applying DL</a></li>
         <li><a href="deeplearningforbeginners.html">Deep Learning for Beginners</a></li>
-        <li><a href="use_cases">深度学习应用案例</a></li>
+        <li><a href="use_cases">Use Cases</a></li>
         <li><a href="accuracy">Deep Learning's Accuracy</a></li>
         <li><a href="ai-machinelearning-deeplearning">AI, Machine Learning and Deep Learning</a></li>
         <li><a href="data-for-deep-learning.html">The Data You Need For Deep Learning</a></li>
@@ -43,11 +43,11 @@
     <li>
       <a href="#">Neural Networks</a>
       <ul>
-        <li><a href="lstm">LSTM和递归网络基础教程</a></li>
-        <li><a href="convolutionalnets">卷积网络</a></li>
+        <li><a href="lstm">Long Short-Term Memory Units</a></li>
+        <li><a href="convolutionalnets">Convolutional Nets for Image Processing</a></li>
         <li><a href="recurrentnetwork">Recurrent Nets and LSTMs</a></li>
         <li><a href="word2vec">Word2Vec: Neural Word Embeddings</a></li>
-        <li><a href="restrictedboltzmannmachine">受限玻尔兹曼机基础教程</a></li>
+        <li><a href="restrictedboltzmannmachine">Restricted Boltzmann Machines</a></li>
         <li><a href="deepautoencoder">Deep AutoEncoder</a></li>
         <li><a href="denoisingautoencoder">Denoising Autoencoders</a></li>
         <li><a href="stackeddenoisingautoencoder">Stacked Denoising Autoencoders</a></li>
@@ -63,7 +63,7 @@
         <li><a href="opendata">Open Data</a></li>
         <li><a href="https://github.com/deeplearning4j/DataVec">DataVec: ETL for ML</a></li>
         <li><a href="canova">Vectorize Data With DataVec</a></li>
-        <li><a href="image-data-pipeline.html#record">构建数据管道</a></li>
+        <li><a href="image-data-pipeline.html#record">Build a Data Pipeline</a></li>
         <li><a href="simple-image-load-transform">Customize an Image Pipeline</a></li>
         <li><a href="datavecdoc/">DataVec Javadoc: DataVec Methods & Classes for ETL</a></li>
       </ul>
@@ -89,7 +89,7 @@
         <li><a href="modelpersistence">Save and Load Models</a></li>
         <li><a href="tsne-visualization">Visualize Data with t-SNE</a></li>
         <li><a href="linear-regression">Perform Regression With Neural Nets</a></li>
-        <li><a href="usingrnns">DL4J中的递归网络</a></li>
+        <li><a href="usingrnns">Use Recurrent Networks in DL4J</a></li>
         <li><a href="compgraph">Build Complex Network Architectures with Computation Graph</a></li>
       </ul>
     </li>
@@ -138,7 +138,7 @@
         <li><a href="unsupervised-learning">Unsupervised Learning: Use Cases</a></li>
         <li><a href="reinforcementlearning">DL and Reinforcement Learning</a></li>
         <li><a href="scala">Scala, Spark and Deep Learning</a></li>
-        <li><a href="">深度学习框架比较：Deeplearning4j、Torch、Theano、Caffe和TensorFlow</a></li>
+        <li><a href="">DL4J, Torch7, Theano and Caffe</a></li>
         <li><a href="glossary">Glossary of Terms for Deep Learning and Neural Nets</a></li>
         <li><a href="deeplearningpapers">Free Online Courses, Tutorials and Papers</a></li>
         <li><a href="deeplearningtranslated">Deep Learning in Other Languages</a></li>
