--- a/_includes/ch-sidebar.html
+++ b/_includes/ch-sidebar.html
@@ -3,8 +3,8 @@
     <li>
       <a href="#">Getting Started</a>
       <ul>
-        <li><a href="quickstart">Quickstart: Running DL4J</a></li>
-        <li><a href="gettingstarted">Comprehensive Setup Guide</a></li>
+        <li><a href="quickstart">快速入门指南</a></li>
+        <li><a href="gettingstarted">DL4J完全安装指南</a></li>
         <li><a href="buildinglocally">Build Locally From Master</a></li>
         <li><a href="maven">Use the Maven Build Tool</a></li>
         <li><a href="buildtools">Configure DL4J in Ivy, Gradle, SBT etc.</a></li>
